# 2022_2_Wild_Spirits

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  client_lint.sh  cppcheck.cfg  lint.sh
client/: .clang-format  .editorconfig  CMakeLists.txt
client/app/: CMakeLists.txt
client/app/res/Shaders/: Simple.frag  Simple.vert
client/app/src/: main.cpp
client/app/test/: CMakeLists.txt  tests.cpp
client/app/tests/: CMakeLists.txt  tests.cpp
client/engine/: CMakeLists.txt
client/engine/src/: EngineLibFunctions.cpp  EngineLibFunctions.h
client/engine/src/Actions/: Action.h
client/engine/src/Buffers/: BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
client/engine/src/Core/: Application.cpp  Application.h  Assert.h  Base.h  Color.h  KeyCode.h  MouseCode.h  Window.cpp  Window.h
client/engine/src/Events/: EventDispatcher.h  EventInterface.h  EventKey.h  EventMouse.h  EventQueue.h  EventWindow.h  Events.h
client/engine/src/ImGui/: ImGuiController.cpp  ImGuiController.h  ImGuiFuncs.cpp  ImGuiFuncs.h
client/engine/src/Layers/: Layer.cpp  Layer.h  LayerAvailRooms.cpp  LayerAvailRooms.h  LayerLocation.cpp  LayerLocation.h  LayerLogin.cpp  LayerLogin.h  LayerMainMenu.cpp  LayerMainMenu.h  LayerRegister.cpp  LayerRegister.h  LayerRoom.cpp  LayerRoom.h  LayerSettings.cpp  LayerSettings.h  LayerStack.cpp  LayerStack.h
client/engine/src/NoIntegration/: ClientRequestProcessor.cpp  ClientRequestProcessor.hpp  GameClasses.cpp  GameClasses.hpp  GameMap.cpp  GameMap.hpp  GameState.hpp  TurnOrder.hpp
client/engine/src/Renderables/: Renderable.h  RenderableGroup.cpp  RenderableGroup.h  RenderableGroupInterface.cpp  RenderableGroupInterface.h  RenderableInterface.h  RenderableTexture.cpp  RenderableTexture.h
client/engine/src/Renderers/: Renderer.cpp  Renderer.h  RendererInterface.h
client/engine/src/Scenes/: Scene.h  SceneInterface.cpp  SceneInterface.h
client/engine/src/Shader/: Shader.cpp  Shader.h  ShaderDataType.h  ShaderLayout.cpp  ShaderLayout.h
client/engine/src/Textures/: CalcTextureParameters.cpp  CalcTextureParameters.h  Texture2D.cpp  Texture2D.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h  stb_image.h
client/engine/src/Transform/: Rotation.h  Transform.cpp  Transform.h
client/engine/src/Utils/: ConsoleLog.cpp  ConsoleLog.h  DataLoading.h  Timer.h
client/engine/test/: CMakeLists.txt  tests.cpp
client/engine/tests/: CMakeLists.txt  tests.cpp
client/requestor/: CMakeLists.txt
client/requestor/Actions/: Action.h  MoveAction.cpp  MoveAction.h  UseActions.cpp  UseActions.h
client/requestor/Classes/: Room.h
common/: CMakeLists.txt
common/logic/: CMakeLists.txt
common/logic/include/: Armor.hpp  Resistible.hpp  Utils.hpp  WithStats.hpp
common/logic/include/activatable/: Action.hpp  Activatable.hpp  ActivatableProxy.hpp  Area.hpp  Buff.hpp  Damage.hpp  Effect.hpp  EffectFactory.hpp
common/logic/include/base/: DamageType.hpp  DamageTypeStorage.hpp  DamageTypes.hpp  Dice.hpp  DynamiclySettable.hpp  ErrorStatus.hpp  Exception.hpp  GameEntity.hpp  Identifiable.hpp  Print.hpp  Resistible.hpp  StatBased.hpp  Tile.hpp  TurnBased.hpp  Utils.hpp
common/logic/include/character/: Character.hpp  CharacterInstance.hpp  CharacterInstanceInterface.hpp  NPC.hpp  NPC_Instance.hpp  OnLocation.hpp  PlayerCharacter.hpp  Position.hpp
common/logic/include/items/: ActivatableItem.hpp  Armor.hpp  Item.hpp  Skill.hpp  Spell.hpp
common/logic/include/structure/: Config.hpp  Demo.hpp  GameMap.hpp  GameState.hpp  Location.hpp  Storage.hpp  TurnOrder.hpp
common/logic/src/: Action.cpp  CharacterInstance.cpp  DamageTypeStorage.cpp  Dice.cpp  Effect.cpp  GameEntity.cpp  GameMap.cpp  GameState.cpp  Location.cpp  NPC_Instance.cpp  OnLocation.cpp  PlayerCharacter.cpp  TurnOrder.cpp
common/logic/src/activatable/: Action.cpp  Activatable.cpp  Effect.cpp
common/logic/src/base/: Dice.cpp  GameEntity.cpp  StatBased.cpp
common/logic/src/character/: Character.cpp  CharacterInstance.cpp  NPC_Instance.cpp  OnLocation.cpp  PlayerCharacter.cpp
common/logic/src/items/: Armor.cpp  Item.cpp  Skill.cpp  Spell.cpp
common/logic/tests/: CMakeLists.txt  logic-test.cpp
common/net/: CMakeLists.txt
common/net/src/: Buffer.cpp  Buffer.hpp  ClientConnection.cpp  ClientConnection.hpp  Encoder.cpp  Encoder.hpp  ErrorCode.hpp  EventLoop.cpp  EventLoop.hpp  WebSocketConnection.cpp  WebSocketConnection.hpp  WebSocketStream.cpp  WebSocketStream.hpp  main.cpp
common/net/tests/: CMakeLists.txt  net_test.cpp
common/requests/: CMakeLists.txt
common/requests/include/: ActionCollector.hpp  ActionHandler.hpp  ChangeCollector.hpp  ChangeGetter.hpp  ClientInterLayer.hpp  ClientProcessorEngine.hpp  ClientRequestProcessor.hpp  GameStateChanger.hpp  Headers.hpp  RequestStringGenerator.hpp  RoomProcessorEngine.hpp  RoomRequestProcessor.hpp  StringRequestParser.hpp  sendaccept.hpp
common/requests/interfaces/: client_interfaces.hpp  gateway_interfaces.hpp  room_interfaces.hpp
common/requests/src/: ActionCollector.cpp  ActionHandler.cpp  ChangeCollector.cpp  ChangeGetter.cpp  ClientProcessorEngine.cpp  ClientRequestProcessor.cpp  GameStateChanger.cpp  RequestStringGenerator.cpp  RoomProcessorEngine.cpp  RoomRequestProcessor.cpp  StringRequestParser.cpp
common/requests/tests/: CMakeLists.txt  requestStringGenerator_test.cpp  request_processor_test.cpp
server/: CMakeLists.txt  main.cpp  test_client.cpp
server/crypto/: CMakeLists.txt
server/crypto/src/: crypto.hpp  crypto_impl.cpp  crypto_impl.hpp
server/db/: CMakeLists.txt  DND_table_creation.sql
server/db/src/: DBConnection.hpp  DBQueue.cpp  DBQueue.hpp  Record.hpp  Table.hpp  Utils.hpp  main.cpp
server/db/tests/: CMakeLists.txt
server/gateway/: CMakeLists.txt
server/gateway/src/: EventLoop.hpp  Gateway.hpp  Hasher.hpp
server/gateway/tests/: CMakeLists.txt  gateway-test.cpp
server/room/: CMakeLists.txt
server/room/src/: main.cpp
server/room/tests/: CMakeLists.txt  room-test.cpp
server/tests/: CMakeLists.txt
(+93 files in other folders)
